# stpipe

./: .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  CONTRIBUTING.md  README.md  TESTING.md  pyproject.toml  setup.cfg  setup.py  towncrier.toml  tox.ini  tox.toml
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/workflows/: build.yml  build_wheels.yml  changelog.yml  ci.yml  ci_cron.yml  data.yml  label.yml  publish-to-pypi.yml  test.yml  test_on_schedule.yml  tests.yml  tests_extra.yml  update.yml
changes/: 120.feature.rst  190.misc.rst  192.feature.rst  193.feature.rst  195.bugfix.rst  198.general.rst  201.bugfix.rst  202.feature.rst  204.removal.rst  214.bugfix.rst  217.bugfix.rst  229.feature.rst  230.misc.rst  235.bug.rst  235.bugfix.rst  240.bugfix.rst  247.feature.rst  249.removal.rst  250.feature.rst  255.feature.rst  270.bugfix.rst  271.bugfix.rst  277.removal.rst  278.removal.rst  279.doc.rst  282.removal.rst  289.bugfix.rst  292.feature.rst  293.bugfix.rst  301.bugfix.rst  305.feature.rst  309.bugfix.rst  312.feature.rst  315.removal.rst  317.feature.rst  317.misc.rst  318.misc.rst  320.bugfix.rst  README.rst
cli-mockup/: stpipe
docs/: README.md  conf.py  index.rst  rtd_environment.yaml
docs/source/: api.rst  call_via_call.rst  call_via_run.rst  conf.py  config_asdf.rst  datamodels.rst  devel_io_design.rst  devel_logging.rst  devel_pipeline.rst  devel_step.rst  index.rst  model_library.rst  parameter_files.rst  user_logging.rst  user_pipeline.rst  user_step.rst
scripts/: strun  stspec
src/stpipe/: __init__.py  __main__.py  _cmdline.py  _function_wrapper.py  _hooks.py  _integration.py  _log.py  _version.py  cmdline.py  config.py  config_parser.py  container.py  crds_client.py  datamodel.py  entry_points.py  exceptions.py  format_template.py  function_wrapper.py  hooks.py  integration.py  library.py  linear_pipeline.py  log.py  log_config.py  pipeline.py  protocols.py  step.py  subproc.py  suffix.py  utilities.py
src/stpipe/_cli/: __init__.py  strun.py
src/stpipe/cli/: __init__.py  command.py  list.py  main.py  strun.py
src/stpipe/tests/: test_abstract_datamodel.py
tests/: conftest.py  test_abstract_datamodel.py  test_abstract_model_container.py  test_asdf_parameters.py  test_config.py  test_config_parser.py  test_crds.py  test_crds_client.py  test_format_template.py  test_hooks.py  test_input.py  test_integration.py  test_jwst.py  test_library.py  test_logger.py  test_overrides.py  test_pipeline.py  test_protocols.py  test_record_logs.py  test_roman.py  test_saving.py  test_scripts.py  test_step.py  test_utilities.py
tests/cli/: test_list.py  test_main.py
tests/steps/: __init__.py  jwst_generic_pars-makeliststep_0001.asdf  jwst_generic_pars-makeliststep_0002.asdf  local.py  local_class.cfg  makelist.cfg  makelist_pipeline.cfg
