[project]
name = "stpipe"
description = "Framework for calibration pipeline software"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "STScI", email = "help@stsci.edu" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "asdf>=2.13",
    "crds>=7.4.1.3",
    "astropy>=5.0.4",
    "importlib_metadata>=4.11.4",
    "pyyaml>=5",
]
dynamic = [
    "version",
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
docs = [
    "numpydoc",
    "sphinx",
    "sphinx-automodapi",
    "sphinx-rtd-theme",
    "tomli; python_version <\"3.11\"",
]
test = [
    "pytest >=7.0.0",
    "pytest-doctestplus >=0.10.0",
]

[project.urls]
repository = "https://github.com/spacetelescope/stpipe"
tracker = "https://github.com/spacetelescope/stpipe/issues"

[project.entry-points."asdf.resource_mappings"]
stpipe = "stpipe.integration:get_resource_mappings"

[project.scripts]
stpipe = "stpipe.cli.main:main"
strun = "stpipe.cli.strun:main"

[build-system]
requires = [
    "setuptools >=61",
    "setuptools_scm[toml] >=3.4",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/stpipe/_version.py"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.pytest.ini_options]
minversion = 6
log_cli_level = "INFO"
xfail_strict = true
doctest_plus = true
doctest_rst = true
text_file_format = "rst"
addopts = [
    "--strict-config",
    "--strict-markers",
    "-ra",
    "--color=yes",
]
testpaths = [
    "tests",
]
filterwarnings = [
    "error::ResourceWarning",
]
markers = [
    "soctests",
]

[tool.ruff]
src = [
    "src",
    "tests",
    "docs",
    "setup.py",
]
line-length = 88
extend-exclude = [
    "docs",
    "scripts/strun",
]

[tool.ruff.lint]
extend-select = [
    "F",      # Pyflakes
    "W", "E", # pycodestyle
    "I",      # isort
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "NPY",     # NumPy-specific checks (recommendations from NumPy)
]
ignore = [
    "ISC001",  # conflicts with ruff formatter
    "UP038",  # results in slower code
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = [
    "S101",
    "S603",
    "S607",
    "INP001",
    "ARG001",
]
"src/stpipe/tests/*.py" = [
    "S101",
]
"src/stpipe/cli/*.py" = [
    "T201",
]
"src/stpipe/cmdline.py" = [
    "T201",
]

[tool.black]
line-length = 88
force-exclude = "^/(\n  (\n      \\.eggs\n    | \\.git\n    | \\.pytest_cache\n    | \\.tox\n  )/\n)\n"

[tool.codespell]
skip = "*.pdf,*.fits,*.asdf,.tox,build,./tags,.git,docs/_build"
