[project]
name = "stpipe"
description = "Framework for calibration pipeline software"
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]
authors = [
  { name = "STScI" },
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "asdf>=3",
  "astropy>=6",
  "crds>=7.4.1.3",
  "importlib_metadata>=4.11.4",
  "pyyaml>=6",
]
dynamic = ["version"]

[project.urls]
documentation = "https://stpipe.readthedocs.io"
repository = "https://github.com/spacetelescope/stpipe"

[project.scripts]
stpipe = "stpipe.cli.main:main"
strun = "stpipe.cli.strun:main"

[project.entry-points."asdf.resource_mappings"]
stpipe = "stpipe.integration:get_resource_mappings"

[project.optional-dependencies]
docs = [
  "numpydoc",
  "sphinx",
  "sphinx-automodapi",
  "sphinx-rtd-theme",
  "tomli; python_version <\"3.11\"",
]
test = [
  "pytest >=9.0.0",
  "pytest-doctestplus >=0.10.0",
]

[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_also = [
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
  "@overload",
  "@typing.overload",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
  "raise NotImplementedError",
  "\\.\\.\\.",
]

[tool.cruft]
skip = ["**/__init__.py", "tests/*"]

[tool.numpydoc_validation]
checks = [
  "all",
  "EX01",  # No examples section found
  "SA01",  # See Also section not found
  "ES01",  # No extended summary found
  "GL08",  # Object does not have a docstring. Ruff catches these, and allows more granular ignores.
  "PR01",  # Parameters not documented. Already caught by ruff.
  "PR09",  # Parameter description should finish with a period
  "RT02",  # First line of return should contain only the type
  "RT05",  # Return value description should finish with a period
]

[tool.pytest]
addopts = ["--color=yes", "--strict-config", "--strict-markers", "-ra"]
filterwarnings = ["error"]
log_cli_level = "INFO"
markers = ["soctests"]
minversion = "9"
testpaths = ["tests"]
doctest_plus = "enabled"
doctest_rst = "enabled"
text_file_format = "rst"

[tool.ruff]
src = [
  "src",
  "tests",
  "docs",
  "setup.py",
]
line-length = 88
extend-exclude = [
  "docs",
  "scripts/strun",
]

[tool.ruff.lint]
extend-select = [
  "F",  # Pyflakes
  "W",
  "E",  # pycodestyle
  "I",  # isort
  "UP",  # pyupgrade
  "S",  # flake8-bandit
  "NPY",  # NumPy-specific checks (recommendations from NumPy)
]
ignore = [
  "ISC001",  # conflicts with ruff formatter
  "S607",  # subprocess executable
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101"  # usage of assert
]

[tool.setuptools]
zip-safe = true

[tool.setuptools_scm]
version_file = "src/stpipe/_version.py"
