[metadata]
name = stpipe
description = TODO
long_description = TODO
author = TODO
license = BSD-3-Clause
url = https://github.com/spacetelescope/stpipe
project_urls =
    Bug Tracker = https://github.com/spacetelescope/stpipe/issues
    Source Code = https://github.com/spacetelescope/stpipe
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
zip_safe = True
python_requires = >=3.6
setup_requires =
    setuptools_scm
package_dir =
    =src
packages = find:

[options.packages.find]
where = src
