[metadata]
name = stpipe
description = TODO
long_description = TODO
author = TODO
license = BSD-3-Clause
url = https://github.com/spacetelescope/stpipe
project_urls =
    Bug Tracker = https://github.com/spacetelescope/stpipe/issues
    Source Code = https://github.com/spacetelescope/stpipe
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
zip_safe = True
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    asdf>=2.7.1
    crds>=7.4.1.3
    astropy>=4.0
    stdatamodels @ git+https://github.com/spacetelescope/stdatamodels
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[options.extras_require]
test =
    ci-watson>=0.3.0
    pytest>=4.6.0
    pytest-doctestplus
    pytest-openfiles>=0.5.0
aws =
    stsci-aws-utils>=0.1.2

[flake8]
select = F, W, E101, E111, E112, E113, E401, E402, E501, E711, E722
# We should set max line length to 88 eventually
max-line-length = 130
exclude =
    docs,
    src/stpipe/extern,
ignore = E203, W503, W504, W605

[tool:pytest]
minversion = 4.6
doctest_plus = true
doctest_rst = true
text_file_format = rst
addopts = --show-capture=no --open-files