[metadata]
name = stpipe
description = Framework for calibration pipeline software
long_description = Framework for calibration pipeline software
long_description_content_type = text/plain
author = STScI
license = BSD-3-Clause
url = https://github.com/spacetelescope/stpipe
project_urls =
    Bug Tracker = https://github.com/spacetelescope/stpipe/issues
    Source Code = https://github.com/spacetelescope/stpipe
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
zip_safe = True
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    asdf>=2.7.1
    crds>=7.4.1.3
    astropy>=5.0.4
    stdatamodels>=0.2.4
package_dir =
    =src
packages = find:
include_package_data = True
scripts =
    scripts/strun

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest>=4.6.0
    pytest-doctestplus
    pytest-openfiles>=0.5.0
docs =
    sphinx
    sphinx-automodapi
    numpydoc
    sphinx-rtd-theme
    stsci-rtd-theme

[options.entry_points]
asdf_extensions =
    stpipe = stpipe.integration:StpipeExtension
console_scripts =
    stpipe = stpipe.cli.main:main

[flake8]
select = F, W, E101, E111, E112, E113, E401, E402, E501, E711, E722
# We should set max line length to 88 eventually
max-line-length = 130
exclude =
    docs,
    src/stpipe/extern,
ignore = E203, W503, W504, W605

[tool:pytest]
minversion = 4.6
norecursedirs =
    src/stpipe/extern
doctest_plus = true
doctest_rst = true
text_file_format = rst
addopts = --open-files
testpaths =
    tests
